# filediff

./: README.md  pyproject.toml
src/filediff/: file1.txt  file_diff.py
