[project]
name = "filediff"
version = "0.1.0"
description = ""
authors = [
    {name = "Dr. Nobel Khandaker",email = "nobel@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry]
packages = [{include = "filediff", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
